2016-03-02  Ola Jeppsson  <ola@adapteva.com>

	* Makefile.am: Always include bsps build rules.

2016-03-01  Ola Jeppsson  <ola@adapteva.com>

	* configure.ac: Add --enable-pal-target argument. Add
	ENABLE_PAL_TARGET Automake conditional
	* e-hal/Makemodule.am [ENABLE_PAL_TARGET]: Set PAL CFLAGS and
	LDFLAGS.

2016-03-01  Ola Jeppsson  <ola@adapteva.com>

	* configure.ac: Add --disable-ehal and --disable-elib
	arguments.
	* Makefile.am: Conditional build of e-lib based on flags given
	to configure. Conditional build of e-hal (and libraries that
	depend on e-hal).

2016-02-29  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/epiphany-hal.c (e_open): Comment out call to
	ee_soft_reset_core().
	(e_close): Likewise.

2016-02-22  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/epiphany-hal.c (e_open): Call ee_soft_reset_core()
	(e_close): Likewise.

2016-02-22  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/epiphany-hal.c (ee_reset_regs): Mask all but SYNC
	irq in IMASK.

2016-02-18  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/epiphany-hal.c (ee_soft_reset_dma): Implement.
	(ee_reset_regs): Clean up. Add reset_dma parameter. Enable
	clock gating. Write FSTATUS instead of STATUS.
	(ee_soft_reset_core): Use ee_soft_reset_dma. Disable timers
	early. Also check ILAT to determine that core is idle.

2016-02-18  Ola Jeppsson  <ola@adapteva.com>

	* e-utils/src/e-read.c (main): Remove call to
	e_reset_system().
	* e-utils/src/e-write.c (main): Likewise.

2016-02-18  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/epiphany-hal.c (ee_soft_reset_core): Replace
	unnecessary call to ee_reset_regs() with one write to ILATCL.

2016-02-18  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/epiphany-hal.c (soft_reset_payload): Add missing
	branch.
	(ee_soft_reset_core): Improve robustness. Fail on detected
	errors.
	* e-hal/src/e-loader.c (e_load_group): Check return value from
	ee_soft_reset_core().

2016-02-18  Ola Jeppsson  <ola@adapteva.com>
